
////
| 🎁🐛✨🐣🗑️
|
| https://github.com/knative/client/pull/[#]
////

## v0.13.0 (unreleased)

[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🐛
| Improve reporting for missing kubeconfig and error connecting to the cluster
| https://github.com/knative/client/pull/725[#725]

| 🎁
| Add `kn source list`
| https://github.com/knative/client/pull/666[#666]

| 🎁
| Add JSON/YAML output format for version command
| https://github.com/knative/client/pull/709[#709]

| 🐣
| Replaced `kn source cron` with `kn source ping`. `--schedule` is not mandatory anymore and defaults to "* * * * *" (every minute)
| https://github.com/knative/client/issues/564[#564]

| ✨
| Add option for adding labels only to service and/or template
| https://github.com/knative/client/issues/675[#675]

| ✨
| Update to Knative serving 0.13.0 and Knative eventing 0.13.1
| https://github.com/knative/client/issues/564[#564]

| ✨
| Allow configuration sink prefixes
| https://github.com/knative/client/pull/571[#571]

| ✨
| Support multiple revisions on `kn revision delete`
| https://github.com/knative/client/pull/657[#657]

| 🎁
| Add human readable `kn route describe`
| https://github.com/knative/client/pull/643[#643]

| 🐛
| Show envFrom when running describe service or revision
| https://github.com/knative/client/pull/630[#630]

| 🎁
| Add E2E test for `kn source binding` commands
| https://github.com/knative/client/pull/634[#634]

| 🎁
| Add `--cmd` and `--arg` for customization of container entrypoint
| https://github.com/knative/client/pull/635[#635]

| ✨
| Add `no-wait` instead of `--async` and deprecate it
| https://github.com/knative/client/pull/639[#639]

| ✨
| Refactor service `create_test.go` and `update_test.go` to remove unecessary `sync` parameter in setup call
| https://github.com/knative/client/pull/656[#656]

| 🐛
| Fix `--image` flag to only allow single occurence
| https://github.com/knative/client/pull/647[#647]

| ✨